# UltraDefrag-SVN

./: .gitignore
src/: Udefrag-VS.sln  UltraDefrag.workspace  build-release.cmd  build-src-package.cmd  build.cmd  exclude-from-sources.lst  make-doxygen.cmd  setvars.cmd  setvars_EOFL-PC_EOFL.cmd  update-translations.cmd  wxbuild.cmd
src/bootexctrl/: bootexctrl.manifest
src/console/: console.manifest
src/dbg/: dbg.manifest  main.c
src/dll/include/: dbg.h  version.h
src/dll/udefrag/: CMakeLists.txt  analyze.c  auxiliary.c  defrag.c  int64.c  map.c  move.c  optimize.c  options.c  query.c  reports.c  search.c  ud_enums.h  ud_flags.h  ud_structs.h  udefrag-internals.h  udefrag.c  udefrag.cbp  udefrag.def  udefrag.h  udefrag.rc  udefrag.vcxproj  volume.c
src/dll/zenwinx/: CMakeLists.txt  Doxyfile  file.c  ftw_ntfs.c  guicon.cpp  int64.c  mem.c  misc.c  mutex.c  ntndk.h  path.c  prb.c  string.c  time.c  utf8.c  volume.c  z-defs.h  z-structs.h  zenwinx.cbp  zenwinx.def  zenwinx.h  zenwinx.rc  zenwinx.vcxproj
src/include/: version.h
src/lua5.1/: CMakeLists.txt  linit.c  loslib.c  lua5.1.vcxproj
src/native/: udefrag.c
src/stopgap/: CMakeLists.txt  guicon.cpp  main.cpp  main.hpp  op.cpp  op.hpp  prec.h  resource.h  stopgap.def  stopgap.hpp  stopgap.rc  stopgap.vcxproj  util.cpp  util.hpp  zen.cpp  zen.hpp
src/tools/patch/wx/: setup.h
src/wxgui/: CMakeLists (2).txt  CMakeLists.txt  LCN.cpp  LegendTransientPopup.cpp  SimpleTransientPopup.cpp  SimpleTransientPopupHeader.h  config.cpp  crash.cpp  fileslist.cpp  i18n.cpp  job.cpp  main.cpp  main.h  makefile  map.cpp  menu.cpp  prec.h  query.cpp  report.cpp  shutdown.cpp  statbar.cpp  taskbar.cpp  tray.cpp  udefrag-internals_flags.h  upgrade.cpp  utils.cpp  vollist.cpp  wxgui.cbp  wxgui.rc  wxgui.vcxproj  wxwidgets-setup.h
src/wxgui/conf/: options.lua
src/wxgui/res/: ultradefrag.manifest  ultradefragx64.manifest  ultradefragx86.manifest
src/zen/: ntndk.h  zen.cpp  zen.def  zen.hpp  zen.sln  zen.vcxproj  zenrc.rc
